[package]
name = "dumbo_config"
version = "0.3.1"
edition = "2021"
authors = ["zongying_cao <zongying_cao@163.com>"]
description = "a config loader"
documentation = "https://docs.rs/dumbo_config"
repository = "https://github.com/cao5zy/dumbo-config"
license = "MIT"

[dependencies]
config = "0.15.14"
log = "0.4.28"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
env_logger = "0.11.8"
ctor = "0.6.3"

